--- a/index.html
+++ b/index.html
@@ -76,23 +76,20 @@
   /* ====== POSICIONES CALIBRADAS (Volvemos a los tamaños ideales) ====== */
   /* FRENTE */
   .pos-nombre-front {
-    position: absolute; left: 26.09%; top: 18.11%;
-    width: 55%; height: 7%;
+    position: absolute; left: 3.50%; top: 15%;
     font-family: 'Vazirmatn', sans-serif; font-weight: 700;
-    font-size: 4.5cqw; /* Tamaño ideal */
-    text-align: left; line-height: 1.1;
-    align-items: flex-start; justify-content: flex-start;
+    font-size: 4.5cqw; text-align: left; line-height: 1;
   }
   .pos-dni-front {
-      position: absolute; left: 14.79%; top: 24.06%;
+      position: absolute; left: 3.50%; top: 21.06%;
       font-family: 'Vazirmatn', sans-serif; font-weight: 400;
       font-size: 3cqw; text-align: left;
   }
   .pos-sangre {
-      position: absolute; left: 94.88%; top: 9.19%; transform: translate(-50%, -50%);
+      position: absolute; left: 94.88%; top: 9%; transform: translate(-50%, -50%);
       width: 10%; height: 16%;
       font-family: 'Roboto', sans-serif; font-weight: 600; color: #0c4e82; 
-      font-size: 4.2cqw; /* Tamaño ideal */
+      font-size: 4cqw; /* Tamaño ideal */
       display: flex; justify-content: center; align-items: center;
   }
   .data-block {
