--- a/index.html
+++ b/index.html
@@ -76,12 +76,15 @@
   /* ====== POSICIONES CALIBRADAS (Tamaños ideales base) ====== */
   /* FRENTE */
   .pos-nombre-front {
-    position: absolute; left: 3.50%; top: 15%;
+    position: absolute; left: 26.09%; top: 18.11%;
+    width: 55%; height: 7%;
     font-family: 'Vazirmatn', sans-serif; font-weight: 700;
-    font-size: 4.5cqw; text-align: left; line-height: 1;
+    font-size: 4.5cqw;
+    text-align: left; line-height: 1.1;
+    align-items: flex-start; justify-content: flex-start;
   }
   .pos-dni-front {
-      position: absolute; left: 3.50%; top: 21.06%;
+      position: absolute; left: 14.79%; top: 24.06%;
       font-family: 'Vazirmatn', sans-serif; font-weight: 400;
       font-size: 3cqw; text-align: left;
   }
@@ -324,35 +327,24 @@ document.addEventListener('DOMContentLoaded', function () {
       const el = document.getElementById(elementoId);
       if (!el || !el.textContent.trim()) return;
 
-      // 1. Asegurar que el elemento tenga display correcto para medir
       el.style.display = 'flex';
+      el.style.fontSize = ''; // Restaurar tamaño original
 
-      // 2. Restaurar al tamaño original del CSS
-      el.style.fontSize = ''; 
-
-      // 3. Función auxiliar para chequear desbordamiento
       const isOverflowing = () => {
-          // Usamos una tolerancia de 1px para errores de redondeo
-          return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
+          // Tolerancia de 2px para asegurar
+          return el.scrollHeight > el.clientHeight + 2 || el.scrollWidth > el.clientWidth + 2;
       };
 
-      // 4. Verificar si se desborda
       if (isOverflowing()) {
-          // Obtener el tamaño actual en píxeles. Si falla, usar un valor por defecto alto.
           let computedSize = window.getComputedStyle(el).fontSize;
-          let currentSizePx = computedSize ? parseFloat(computedSize) : 24; // Valor fallback
+          let currentSizePx = computedSize ? parseFloat(computedSize) : 16;
 
-          // 5. Bucle de reducción: Achicar 5% mientras siga desbordado
           let safety = 0;
-          // Límite de seguridad: 50 iteraciones o tamaño mínimo de 6px
-          while (isOverflowing() && currentSizePx > 6 && safety < 50) {
-              currentSizePx *= 0.95; // Reducir un 5%
+          // Bucle más agresivo: reduce 10% cada vez
+          while (isOverflowing() && currentSizePx > 6 && safety < 30) {
+              currentSizePx *= 0.90; 
               el.style.fontSize = `${currentSizePx}px`;
               safety++;
-          }
-          // Si después de todo sigue desbordado (por el límite de seguridad), forzar un tamaño pequeño
-          if (isOverflowing()) {
-              el.style.fontSize = '8px'; // Último recurso
           }
       }
   }
@@ -391,26 +383,21 @@ document.addEventListener('DOMContentLoaded', function () {
     document.getElementById('cred-dni-back').textContent = `D.N.I: ${dni}`;
     document.getElementById('cred-id-number').textContent = `ID03-${dni.replace(/\./g, '')}`;
 
-    // --- APLICAR AJUSTE "SHRINK TO FIT" ---
-    // Usamos document.fonts.ready para asegurar que las fuentes estén cargadas
-    // y luego requestAnimationFrame para esperar al layout del navegador.
-    document.fonts.ready.then(() => {
-        requestAnimationFrame(() => {
-            // Un segundo rAF para asegurar que el primer layout se ha completado
-            requestAnimationFrame(() => {
-                const idsToFit = [
-                    'cred-sangre',
-                    'cred-antecedentes',
-                    'cred-medicamentos',
-                    'cred-alergias',
-                    'cred-operaciones',
-                    'cred-domicilio',
-                    'cred-contactos'
-                ];
-                idsToFit.forEach(id => fitTextToContainer(id));
-            });
-        });
-    });
+    // --- APLICAR AJUSTE CON ESPERA LARGA ---
+    // Esperamos 800ms para asegurar que el navegador ha terminado de renderizar
+    setTimeout(() => {
+        const idsToFit = [
+            'cred-nombre-front',
+            'cred-sangre',
+            'cred-antecedentes',
+            'cred-medicamentos',
+            'cred-alergias',
+            'cred-operaciones',
+            'cred-domicilio',
+            'cred-contactos'
+        ];
+        idsToFit.forEach(id => fitTextToContainer(id));
+    }, 800); // 800ms de espera
   }
 
   // Ejecutar al cargar
