--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
     white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
   }
   .pos-dni-front {
-      position: absolute; left: 3,50%; top: 21.06%;
-      font-family: 'Vazirmatn', sans-serif; font-weight: 400; font-size: 3cqw; text-align: left;
+      position: absolute; left: 3.50%; top: 21.06%;
+      font-family: 'Vazirmatn', sans-serif; font-weight: 400;
+      font-size: 3cqw; text-align: left;
   }
   .pos-sangre {
       position: absolute; left: 94.88%; top: 9%; transform: translate(-50%, -50%);
