--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
   
   /* MODIFICADO PARA QUE SE ADAPTE AL CONTENIDO */
  /* MODIFICADO CON PRIORIDAD ALTA PARA ADAPTAR ALTURA */
+/* BUSCA ESTE BLOQUE Y REEMPLÁZALO TODO POR EL SIGUIENTE */
   .modal-card {
+      /* Mantener las animaciones originales */
       transform: scale(0.9) translateY(10px);
       opacity: 0;
       transition: transform 0.25s ease, opacity 0.25s ease;
 
-      /* Estas reglas con !important fuerzan el ajuste de altura */
-      height: auto !important;       /* Fuerza la altura automática */
-      min-height: 0 !important;      /* Elimina cualquier altura mínima forzada */
-      max-height: 90vh !important;   /* Límite de seguridad */
-      overflow-y: auto !important;   /* Scroll si es necesario */
-      display: flex !important;      /* Asegura comportamiento flexible */
-      flex-direction: column !important; /* Apila el contenido */
+      /* --- INTENTO DE SOLUCIÓN DEFINITIVO --- */
+      display: block !important;  /* Fuerza a que sea un bloque normal, no flex */
+      height: auto !important;    /* La altura la define el contenido */
+      min-height: 0 !important;   /* Se asegura de no tener altura mínima */
+      max-height: 90vh;           /* Límite de seguridad para que no se salga de pantalla */
+      overflow-y: auto;           /* Scroll si fuera necesario */
   }
   
   .modal-card.show { transform: scale(1) translateY(0); opacity: 1; }
@@ -131,7 +132,7 @@
       font-family: 'Vazirmatn', sans-serif; font-weight: 700; font-size: 4.5cqw; text-align: left;
   }
   .pos-dni-back {
-      position: absolute; top: 13%; left: 3.50%;
+      position: absolute; top: 13%; left: 3.2%;
       font-family: 'Vazirmatn', sans-serif; font-weight: 400; font-size: 3cqw; text-align: left;
   }
   .pos-id-number {
