--- a/index.html
+++ b/index.html
@@ -40,21 +40,10 @@
 /* ----POPUP----  */ 
   
 .modal-card {
-      /* Mantener las animaciones originales */
       transform: scale(0.9) translateY(10px);
       opacity: 0;
       transition: transform 0.25s ease, opacity 0.25s ease;
-
-      /* --- SOLUCIÓN NUCLEAR PARA ALTURA --- */
-      display: flex !important;          /* Volvemos a flex para controlar el flujo */
-      flex-direction: column !important; /* Apila el contenido verticalmente */
-      justify-content: flex-start !important; /* Pega todo el contenido arriba, eliminando espacio abajo */
-      flex-grow: 0 !important;           /* CRÍTICO: Prohíbe a la tarjeta estirarse más de lo necesario */
-      
-      height: auto !important;           /* La altura es exactamente la del contenido + padding */
-      min-height: 0 !important;          /* Asegura que no haya altura mínima fantasma */
-      max-height: 90vh !important;       /* Límite de seguridad */
-      overflow-y: auto !important;       /* Scroll si hace falta */
+      /* Ya no necesitamos forzar alturas ni displays aquí porque el HTML ahora es correcto */
   }
   
   .modal-card.show { transform: scale(1) translateY(0); opacity: 1; }
@@ -447,13 +436,13 @@
     </div>
   </footer>
 
-  <div id="novedades-modal" class="modal-backdrop fixed inset-0 bg-black/60 flex items-center justify-center z-50 hidden">
-    <div class="modal-card bg-cura-card border border-cura-accent/60 rounded-2xl px-4 py-4 sm:px-6 sm:py-5 w-[92%] max-w-4xl shadow-lg">
+<div id="novedades-modal" class="modal-backdrop fixed inset-0 bg-black/60 flex items-center justify-center z-50 hidden">
+    <div class="modal-card bg-cura-card border border-cura-accent/60 rounded-2xl px-4 py-4 sm:px-6 sm:py-5 w-auto max-w-lg shadow-lg mx-4">
       <div class="flex items-start justify-between gap-3">
         <div class="flex-1">
           <h2 class="text-sm sm:text-base font-semibold text-white mb-1">Bienvenido, tenemos novedades</h2>
-          <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-3 text-[11px] sm:text-[13px] text-cura-accentLight">
-            <p class="sm:max-w-[65%] leading-snug">La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.</p>
+          <div class="text-[11px] sm:text-[13px] text-cura-accentLight">
+            <p class="leading-snug">La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.</p>
           </div>
         </div>
         <button type="button" class="ml-2 text-cura-accentLight/80 hover:text-white text-xs sm:text-sm font-semibold" id="novedades-close-btn">✕</button>
@@ -725,7 +714,7 @@ document.addEventListener('DOMContentLoaded', function () {
     }
 
     abrirNovedades();
-    setTimeout(cerrarNovedades, 10000); // 10s auto-cierre
+    setTimeout(cerrarNovedades, 5000); // 5s auto-cierre
 
     if (novCloseBtn) novCloseBtn.addEventListener('click', cerrarNovedades);
     novModal.addEventListener('click', function (e) { if (e.target === novModal) cerrarNovedades(); });
