--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
       <p>Copyright © 2025 C.U.R.A. - Todos los derechos reservados.</p>
       <div class="flex flex-wrap gap-3">
         <a href="#informacion" class="hover:text-white">Información</a>
-        <a href="/demonivel2.html" target="_blank" class="hover:text-white">Demo QR Nivel 2</a>
+        <a href="/demonivel2.html" target="_blank" class="hover:text-white">Demo Enfermero</a>
         <a href="#contacto" class="hover:text-white">Contacto</a>
       </div>
     </div>
