--- a/index.html
+++ b/index.html
@@ -757,9 +757,9 @@ document.addEventListener('DOMContentLoaded', function () {
   // TIPO DE SANGRE: Lista simplificada (sin AB) para asegurar que entre en el círculo
   const tiposSangre = ["A+", "A-", "B+", "B-", "O+", "O-"];
 
-  const alergiasBase = ["PENICILINA", "NÍQUEL", "POLEN", "ÁCAROS", "SULFAS", "LATEX", "FRUTILLAS"];
-  const operacionesBase = ["APENDICECTOMÍA", "CESÁREA", "VESÍCULA", "PRÓTESIS RODILLA", "BYPASS GÁSTRICO", "AMÍGDALAS"];
-  const medsComunes = ["IBUPROFENO 600", "PARACETAMOL 1G", "ASPIRINA"];
+  const alergiasBase = ["PENICILINA", "CIPROFLOXACINA", "POLEN", "ÁCAROS", "SULFAS", "LATEX", "FRUTILLAS"];
+  const operacionesBase = ["APENDICECTOMÍA", "CESÁREA", "COLECISTECTOMÍA", "BOMBA DE MORFINA", "BYPASS GÁSTRICO", "AMIGDALECTOMÍA"];
+  const medsComunes = ["IBUPROFENO", "PARACETAMOL", "ASPIRINA"];
 
   // --- PERFILES MÉDICOS COHERENTES ---
   const perfilesMedicos = [
