--- a/index.html
+++ b/index.html
@@ -295,23 +295,20 @@
         <p class="text-xs text-cura-accentLight">Recibí recordatorios automáticos de vacunas, chequeos anuales y controles preventivos según tu edad.</p>
     </div>
 </div>
-
-
+<div class="mt-12 flex justify-center w-full">
+        <a href="/Informacion/informacion.html" 
+           class="group relative inline-flex items-center gap-2 px-8 py-3 bg-cura-accent hover:bg-cura-accent/80 text-white font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-cura-accent/25 hover:-translate-y-0.5 border border-white/10">
+            <span>Hay más beneficios. <strong>¿Querés saber más? Hacé click acá</strong></span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform group-hover:translate-x-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+            </svg>
+        </a>
+    </div>
+    </section>
 
 </section>
 
-    <!-- INICIO DEL BOTÓN -->
-<div class="mt-10 flex justify-center">
-    <a href="/Informacion/informacion.html" 
-       class="group relative inline-flex items-center gap-2 px-8 py-3 bg-cura-accent hover:bg-cura-accent/80 text-white font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-cura-accent/25 hover:-translate-y-0.5 border border-white/10">
-        <span>Hay más beneficios. <strong>¿Querés saber más? Hacé click acá</strong></span>
-        <!-- Flechita animada -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform group-hover:translate-x-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
-        </svg>
-    </a>
-</div>
-<!-- FIN DEL BOTÓN -->
+
 
     <section id="informacion" class="space-y-6">
       <div class="max-w-2xl">
