--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
           </p>
         </div>
 
-<div class="grid md:grid-cols-3 gap-4">
-    <!-- Tus tarjetas existentes -->
-    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+<section class="py-10 px-4"> <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        
+        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
         <h3 class="text-sm font-semibold text-white mb-1">Tu DNI de salud</h3>
         <p class="text-xs text-cura-accentLight">Funciona como un <strong>documento único que unifica tu historia clínica</strong> del sector público, privado y obras sociales.</p>
     </div>
