--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
 </section>
 
-
+<section>
     <section id="sumate" class="space-y-6">
       <div class="max-w-2xl">
         <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
