--- a/Informacion/fundamentos.html
+++ b/Informacion/fundamentos.html
@@ -101,7 +101,7 @@
         <div class="w-full flex justify-center">
             <a href="/Informacion/fundamentos.html" class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-6 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1 min-h-[450px] md:min-h-[350px]">
                 
-                <p id="typewriter-text" class="text-xs md:text-sm text-cura-accentLight leading-relaxed cursor-blink">
+               <p id="typewriter-text" class="text-sm md:text-base text-cura-accentLight leading-relaxed cursor-blink">
                    La Ley C.U.R.A. nace para reconstruir por completo el sistema de salud argentino, reemplazando un modelo fragmentado, analógico y desigual por una red sanitaria única, interoperable, federal y completamente digital. Su finalidad es garantizar que cada persona tenga una historia clínica integrada, accesible desde cualquier punto del país, con estándares estrictos de seguridad, privacidad y trazabilidad.
 
 La ley establece un sistema nacional unificado, capaz de conectar de forma segura a hospitales, clínicas, laboratorios, farmacias, obras sociales, PAMI y ART. Este modelo permite continuidad asistencial, reduce errores médicos, elimina la duplicación de estudios y fortalece la equidad territorial al garantizar el mismo acceso a la información sanitaria sin importar la provincia o el prestador.
