--- a/Informacion/financiamiento.html
+++ b/Informacion/financiamiento.html
@@ -101,7 +101,7 @@
         <div class="w-full flex justify-center">
             <a href="/Informacion/financiamiento.html" class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-6 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1 min-h-[450px] md:min-h-[350px]">
                 
-               <p id="typewriter-text" class="text-sm md:text-base text-white leading-relaxed cursor-blink">
+             <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink">
                   El financiamiento del Sistema C.U.R.A. se basa en un modelo moderno, sostenible y diversificado que combina fondos públicos, reorganización presupuestaria, aportes del sistema sanitario y mecanismos de inversión estratégica. El objetivo es garantizar que la salud digital sea un derecho accesible, estable y de calidad para todos, sin generar nuevas cargas para las provincias ni para los prestadores.
 
 El eje central del financiamiento es la máxima eficiencia presupuestaria: C.U.R.A. reemplaza procesos analógicos costosos, elimina duplicaciones de estudios, reduce fraude prestacional, automatiza auditorías y unifica sistemas dispersos. Los ahorros generados por esta modernización se reinvierten directamente en equipamiento, infraestructura, tecnología, recursos humanos, conectividad y mejoras del propio sistema.
