--- a/Informacion/seg-priv.html
+++ b/Informacion/seg-priv.html
@@ -99,7 +99,7 @@
         <h1 class="text-3xl font-bold text-white mb-8 text-center">Seguridad y Privacidad de Datos</h1>
         
         <div class="w-full flex justify-center">
-            <a href="/Informacion/beneficios.html" class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-6 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1 min-h-[450px] md:min-h-[350px]">
+            <a href="/Informacion/seg-priv.html" class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-6 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1 min-h-[450px] md:min-h-[350px]">
                 
              <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink">
 La Ley C.U.R.A. establece uno de los marcos de seguridad y privacidad más avanzados del sistema sanitario argentino. El diseño del sistema sigue el principio de Privacidad y Seguridad por Diseño, garantizando protección desde la infraestructura hasta cada interacción realizada por un profesional de la salud.
