--- a/Informacion/objetivos.html
+++ b/Informacion/objetivos.html
@@ -99,7 +99,7 @@
         <h1 class="text-3xl font-bold text-white mb-8 text-center">Objetivos del Sistema C.U.R.A.</h1>
         
         <div class="w-full flex justify-center">
-            <a href="/Informacion/financiamiento.html" class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-6 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1 min-h-[450px] md:min-h-[350px]">
+            <a href="/Informacion/objetivos.html" class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-6 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1 min-h-[450px] md:min-h-[350px]">
                 
              <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink">
 El Sistema C.U.R.A. tiene como objetivo central integrar toda la información sanitaria del país en una plataforma única, segura, interoperable y federal, garantizando que cada persona tenga acceso a su historia clínica completa en cualquier lugar y momento. Su misión es modernizar la infraestructura de salud, mejorar la calidad de la atención y reducir las desigualdades territoriales y administrativas.
