--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -111,7 +111,7 @@
                     
                     <!-- Foto Circular -->
                     <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-cura-accent mb-4 shadow-md bg-white">
-                        <img src="https://media.licdn.com/dms/image/v2/D4D03AQHojXgKvXQ4QA/profile-displayphoto-crop_800_800/B4DZrDcjVJIEAI-/0/1764215634051?e=1766016000&v=beta&t=3GvbAm2s-voLdAQ_krSJtiYFVjc6JwMsifqQOvmcY-E" alt="Franco Agustin Paganini" class="w-full h-full object-cover">
+                        <img src="/ID01-41316202/profile.png" alt="Franco Agustin Paganini" class="w-full h-full object-cover">
                     </div>
                     
                     <!-- Nombre -->
