--- a/Informacion/recursos.html
+++ b/Informacion/recursos.html
@@ -78,7 +78,7 @@
       </div>
 
       <nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap justify-center sm:justify-end mt-2 sm:mt-0">
-        <a href="/Informacion/recursos.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
+        <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
             <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> 
             Volver
         </a>
