--- a/index.html
+++ b/index.html
@@ -613,11 +613,15 @@ document.addEventListener('DOMContentLoaded', function () {
 
   }
 
-  if (btnInfo && targetInfo) {
-
-    btnInfo.addEventListener('click', e => { e.preventDefault(); smoothScrollTo(targetInfo); });
-
-  }
+// --- ESTO ES LO NUEVO ---
+if (btnInfo && targetInfo) {
+  btnInfo.addEventListener('click', e => { 
+    e.preventDefault(); 
+    // El 300 es el espacio que deja arriba. 
+    // Cuanto mayor sea el número, más abajo aparecerá el título.
+    smoothScrollTo(targetInfo, 2000, 300); 
+  });
+}
 
 navInicioLinks.forEach(link => {
 
@@ -633,11 +637,12 @@ navInicioLinks.forEach(link => {
 
   });
 
-  navInfoLinks.forEach(link => {
-
-    link.addEventListener('click', e => { e.preventDefault(); smoothScrollTo(targetInfo); });
-
+navInfoLinks.forEach(link => {
+  link.addEventListener('click', e => { 
+      e.preventDefault(); 
+      smoothScrollTo(targetInfo, 2000, 300); // Mismo número 300 aquí
   });
+});
 
   navContactoLinks.forEach(link => {
 
