--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     </section>
 
 
-    <section id="contacto" class="space-y-6">
+    <section id="contacto" class="space-y-6 mt-32">
       <div class="max-w-2xl">
         <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Comunícate con nosotros</h2>
         <p class="text-sm text-cura-accentLight">Toda pregunta es válida. Nos interesa escuchar tus dudas, aportes y propuestas para que puedas formar parte de esta gran revolución sanitaria.</p>
