--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
       </form>
     </section>
 
-    <section class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md">
+   <section class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md mt-16">
       <h3 class="text-sm font-semibold text-white mb-1">Tenemos novedades</h3>
       <p class="text-xs text-cura-accentLight leading-snug">La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.</p>
     </section>
