--- a/index.html
+++ b/index.html
@@ -912,5 +912,6 @@ document.addEventListener('DOMContentLoaded', function () {
         <button type="submit" class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold">Enviar</button>
         <p class="text-[10px] text-cura-accentLight mt-1">Los campos marcados con * son obligatorios.</p>
       </form>
+  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 </body>
 </html>
