--- a/index.html
+++ b/index.html
@@ -337,10 +337,16 @@
         <p class="text-sm text-cura-accentLight">Completá tus datos para sumarte a la iniciativa.</p>
       </div>
 
-      <form id="sumate-form"
-            action="https://formsubmit.co/ajax/contacto@leycura.org"
-            method="POST"
-            class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
+  <form id="sumate-form"
+      action="https://formsubmit.co/contacto@leycura.org"
+      method="POST"
+      class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
+
+  <input type="hidden" name="_subject" value="Nuevo ciudadano sumado - LeyCURA">
+  <input type="hidden" name="_template" value="box">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_next" value="https://www.leycura.org/gracias-sumate.html">
+
 
         <input type="hidden" name="_subject" value="Nuevo ciudadano sumado - LeyCURA">
         <input type="hidden" name="_template" value="box">
@@ -711,6 +717,7 @@ navInfoLinks.forEach(link => {
   }
 
   // --- FORMULARIO SUMATE (ORIGINAL) ---
+  // --- FORMULARIO SUMATE (ARREGLADO) ---
   const sumateForm    = document.getElementById('sumate-form');
   const sumateModal   = document.getElementById('sumate-modal');
   const sumateCard    = sumateModal ? sumateModal.querySelector('.modal-card') : null;
@@ -719,38 +726,65 @@ navInfoLinks.forEach(link => {
   function abrirSumateModal() {
     if (!sumateModal) return;
     sumateModal.classList.remove('hidden');
-    requestAnimationFrame(function () { sumateModal.classList.add('show'); sumateCard.classList.add('show'); });
+    requestAnimationFrame(() => {
+      sumateModal.classList.add('show');
+      if (sumateCard) sumateCard.classList.add('show');
+    });
   }
+
   function cerrarSumateModal() {
     if (!sumateModal) return;
-    sumateModal.classList.remove('show'); sumateCard.classList.remove('show');
-    setTimeout(function () { sumateModal.classList.add('hidden'); }, 250);
+    sumateModal.classList.remove('show');
+    if (sumateCard) sumateCard.classList.remove('show');
+    setTimeout(() => { sumateModal.classList.add('hidden'); }, 250);
   }
 
   if (sumateForm && sumateModal && sumateOkBtn) {
     sumateForm.addEventListener('submit', async function (e) {
       e.preventDefault();
-      const submitBtn = sumateForm.querySelector('button[type="submit"]');
-      const originalText = submitBtn ? submitBtn.textContent : '';
-      if (submitBtn) { submitBtn.disabled = true; submitBtn.textContent = 'Enviando…'; }
+
+      const submitBtn   = sumateForm.querySelector('button[type="submit"]');
+      const originalTxt = submitBtn ? submitBtn.textContent : '';
+
+      if (submitBtn) {
+        submitBtn.disabled  = true;
+        submitBtn.textContent = 'Enviando…';
+      }
 
       try {
         const formData = new FormData(sumateForm);
-        // FormSubmit AJAX
-        const formSubmitPromise = fetch(sumateForm.action, {
-          method: 'POST', headers: { 'Accept': 'application/json' }, body: formData
+
+        // Usamos SIEMPRE el endpoint AJAX explícito
+        const response = await fetch('https://formsubmit.co/ajax/contacto@leycura.org', {
+          method: 'POST',
+          headers: { 'Accept': 'application/json' },
+          body: formData
         });
-        
-        const [formRes] = await Promise.all([formSubmitPromise]);
-        if (!formRes.ok) throw new Error('Error al enviar el formulario');
+
+        if (!response.ok) {
+          console.error('Error FormSubmit status:', response.status);
+          throw new Error('Error al enviar el formulario');
+        }
+
         sumateForm.reset();
         abrirSumateModal();
-      } catch (err) { alert('Ocurrió un error. Intentá nuevamente.'); }
-      finally { if (submitBtn) { submitBtn.disabled = false; submitBtn.textContent = originalText; } }
+      } catch (err) {
+        console.error('Error al enviar SUMATE:', err);
+        alert('Ocurrió un error al enviar el formulario. Intentá nuevamente.');
+      } finally {
+        if (submitBtn) {
+          submitBtn.disabled  = false;
+          submitBtn.textContent = originalTxt;
+        }
+      }
     });
+
     sumateOkBtn.addEventListener('click', cerrarSumateModal);
-    sumateModal.addEventListener('click', function (e) { if (e.target === sumateModal) cerrarSumateModal(); });
+    sumateModal.addEventListener('click', function (e) {
+      if (e.target === sumateModal) cerrarSumateModal();
+    });
   }
+
 
   // --- NEWSLETTER (ORIGINAL) ---
   const newsletterForm = document.getElementById('newsletter-form');
